Update Study Email Sharing

--- a/force-app/main/default/classes/ShareModalController.cls
+++ b/force-app/main/default/classes/ShareModalController.cls
@@ -4,12 +4,10 @@
 public without sharing class ShareModalController {
 
     @AuraEnabled
-    public static void sendEmail(String hcpeId, String hcpContactId, String email) {
+    public static void sendEmail(String whatId, String fromId, String email) {
         try{
-            if(hcpContactId == null) {
-                hcpContactId = CommunityService.getUserContact().Id;
-            }
-            SendEmailTemplate.sendShareEmail(hcpeId, hcpContactId, email);
+            if(fromId == null)fromId = CommunityService.getUserContact().Id;
+            SendEmailTemplate.sendShareEmail(whatId, fromId, email);
         }catch (Exception e){
             throw new AuraHandledException(e.getMessage() + '\n' + e.getStackTraceString());
         }
