--- a/force-app/main/default/classes/ResourceService.cls
+++ b/force-app/main/default/classes/ResourceService.cls
@@ -4,8 +4,6 @@ public with sharing class ResourceService {
     public static final String RESOURCE_SOURCE_PLATFORM = 'Platform-TA';
     public static final String RESOURCE_SOURCE_THIRD_PARTY = '3rd Party';
     @TestVisible
-    private static String PARTICIPANT_TEST_ID = 'a0D4E0000000000000';
-    @TestVisible
     private static String DEFAULT_LANGUAGE = 'en_US';
     @TestVisible
     private static String RESOURCE_TYPE_ARTICLE = 'Article';
@@ -58,6 +56,10 @@ public with sharing class ResourceService {
 
     public Participant__c getParticipant() {
         return this.getParticipant(ResourceService.RESOURCE_TYPE_ARTICLE);
+    }
+
+    public ParticipantService.ParticipantState getParticipantState() {
+        return ParticipantService.getParticipantState();
     }
 
     @TestVisible
@@ -179,7 +181,8 @@ public with sharing class ResourceService {
     @TestVisible
     private Participant__c getParticipant(String resourceType) {
         DatabaseProxy databaseProxy = (DatabaseProxy) ClassFactory.newInstance(DatabaseProxy.class);
-        String participantId = (Test.isRunningTest() ? PARTICIPANT_TEST_ID : CommunityService.getParticipantId());
+        CommunityService cService = (CommunityService) ClassFactory.newInstance(CommunityService.class);
+        String participantId = cService.getParticipantId();
         String participantQuery =
                 'SELECT Id, ' +
                         'Contact__r.Language__c, ' +
@@ -215,42 +218,18 @@ public with sharing class ResourceService {
     public class ResourceWrapper {
 
         @AuraEnabled
-        public String resourceId;
+        public Resource__c resource;
         @AuraEnabled
         public Boolean isFavorite = false;
         @AuraEnabled
         public Boolean isVoted = false;
-        @AuraEnabled
-        public String title;
-        @AuraEnabled
-        public String description;
-        @AuraEnabled
-        public String body;
-        @AuraEnabled
-        public String image;
-        @AuraEnabled
-        public Date expirationDate;
-        @AuraEnabled
-        public String type;
-        @AuraEnabled
-        public String video;
-        @AuraEnabled
-        public Boolean isUpdated;
 
         public ResourceWrapper(Resource__c resource) {
             if (!ResourceDecoupler.getResourceActions(resource).isEmpty()) {
                 isFavorite = ResourceDecoupler.getResourceActions(resource)[0].IsFavorite__c;
                 isVoted = ResourceDecoupler.getResourceActions(resource)[0].IsVoted__c;
             }
-            title = resource.Title__c;
-            description = resource.Description__c;
-            image = resource.Image__c;
-            expirationDate = resource.Expiration_Date__c;
-            type = resource.RecordType.DeveloperName;
-            resourceId = resource.Id;
-            video = resource.Video__c;
-            body = resource.Body__c;
-            isUpdated = resource.Updated_Date__c != null;
+            this.resource = resource;
         }
     }
 }
