--- a/force-app/main/default/classes/StudyActions.cls
+++ b/force-app/main/default/classes/StudyActions.cls
@@ -65,6 +65,7 @@ public abstract class StudyActions {
     public static final String ACT_SHARE = 'share';
     public static final String ACT_FIND_STUDY_SITES = 'findStudySites';
     public static final String ACT_SEND_SITE_REQUEST = 'sendSiteRequest';
+    public static final String ACT_MY_PATIENTS = 'myPatients';
 
     public static final String ACT_MANAGE_REFERRALS = 'manageReferrals';
     public static final String ACT_MANAGE_REFERRING_CLINICS = 'manageReferringClinics';
@@ -95,6 +96,7 @@ public abstract class StudyActions {
     public static final String LABEL_FIND_STUDY_SITES = Label.BTN_Find_study_sites;
     public static final String LABEL_SEND_SITE_REQUEST = Label.BTN_Send_site_request;
     public static final String LABEL_REQUEST_TO_REFER = Label.BTN_Request_to_refer;
+    public static final String LABEL_MY_PATIENTS = Label.BTN_My_Patients;
 
     public static final String LABEL_MANAGE_REFERRALS = Label.BTN_Manage_referrals;
     public static final String LABEL_MANAGE_REFERRING_CLINICS = Label.BTN_Manage_referring_clinics;
