--- a/force-app/main/default/classes/StudyDetailViewController.cls
+++ b/force-app/main/default/classes/StudyDetailViewController.cls
@@ -111,7 +111,7 @@ public without sharing class StudyDetailViewController {
                 trialDetail.actions = studyActions.actions;
 
                 Map<Id, Study_Site__c> idToStudySiteMap = new Map<Id, Study_Site__c>();
-                for (Participant_Enrollment__c pe : participantEnrollments)
+                for(Participant_Enrollment__c pe : participantEnrollments)
                     idToStudySiteMap.put(pe.Study_Site__r.Site__c, pe.Study_Site__r);
 
                 List<Account> accounts = getAccounts(idToStudySiteMap.keySet());
@@ -164,23 +164,7 @@ public without sharing class StudyDetailViewController {
     }
 
     public static List<StudyTab> getStudyTabs(String userMode) {
-
         List<StudyTab> tabs = new List<StudyTab>();
-        if (userMode == CommunityService.USER_MODE_PARTICIPANT) {
-            ParticipantService.ParticipantStates stateValue = ParticipantService.getParticipantState().value;
-            if (stateValue != ParticipantService.ParticipantStates.ALUMNI) {
-                tabs.add(new StudyTab(
-                        'tab-about-the-study',
-                        'about-the-study',
-                        TranslateHelper.getLabelValue('PG_SW_Tab_About_The_Study')
-                ));
-                tabs.add(new StudyTab(
-                        'tab-referred-patient',
-                        'referred-patient',
-                        'Visits'
-                ));
-            }
-
         tabs.add(new StudyTab(
                 'tab-about-the-study',
                 'about-the-study',
@@ -223,12 +207,21 @@ public without sharing class StudyDetailViewController {
                     'reports',
                     TranslateHelper.getLabelValue('PG_SW_Tab_Reports')
             ));
-        } else {
-            tabs.add(new StudyTab(
-                    'tab-referred-patient',
-                    'referred-patient',
-                    'Visits'
-            ));
+        } else if (userMode == CommunityService.USER_MODE_PARTICIPANT){
+            ParticipantService.ParticipantStates stateValue = ParticipantService.getParticipantState().value;
+            if (stateValue != ParticipantService.ParticipantStates.ALUMNI) {
+                tabs.add(new StudyTab(
+                        'tab-about-the-study',
+                        'about-the-study',
+                        TranslateHelper.getLabelValue('PG_SW_Tab_About_The_Study')
+                ));
+                tabs.add(new StudyTab(
+                        'tab-referred-patient',
+                        'referred-patient',
+                        'Visits'
+                ));
+            }
+        
             tabs.add(new StudyTab(
                     'tab-tasks',
                     'task',
@@ -239,7 +232,7 @@ public without sharing class StudyDetailViewController {
                     'resources',
                     'Resources'
             ));
-
+        
             if(stateValue != ParticipantService.ParticipantStates.ALUMNI) {//I didn't find a better solution.
                 tabs.add(new StudyTab(
                         'tab-lab-results',
@@ -247,53 +240,8 @@ public without sharing class StudyDetailViewController {
                         'Lab Results'
                 ));
             }
-        } else {
-            tabs.add(new StudyTab(
-                    'tab-about-the-study',
-                    'about-the-study',
-                    TranslateHelper.getLabelValue('PG_SW_Tab_About_The_Study')
-            ));
-
-            if (userMode == CommunityService.USER_MODE_HCP) {
-
-                tabs.add(new StudyTab(
-                        'tab-referred-patients',
-                        'referred-patient',
-                        TranslateHelper.getLabelValue('PG_SW_Tab_Referred_Patients')
-                ));
-                tabs.add(new StudyTab(
-                        'tab-medical-record-review-log',
-                        'chart-review-sent',
-                        TranslateHelper.getLabelValue('PG_SW_Tab_Medical_Record_Review_Log')
-                ));
-                tabs.add(new StudyTab(
-                        'tab-referred-study-sites',
-                        'referred-clinic',
-                        TranslateHelper.getLabelValue('PG_SW_Tab_Study_Sites')
-                ));
-                tabs.add(new StudyTab(
-                        'tab-reports',
-                        'reports',
-                        TranslateHelper.getLabelValue('PG_SW_Tab_Reports')
-                ));
-            } else if (userMode == CommunityService.USER_MODE_PI) {
-                tabs.add(new StudyTab(
-                        'tab-referrals',
-                        'referrals',
-                        TranslateHelper.getLabelValue('PG_SW_Tab_Referrals')
-                ));
-                tabs.add(new StudyTab(
-                        'tab-referred-clinics',
-                        'referred-clinic',
-                        TranslateHelper.getLabelValue('PG_SW_Tab_Referring_Clinics')
-                ));
-                tabs.add(new StudyTab(
-                        'tab-reports',
-                        'reports',
-                        TranslateHelper.getLabelValue('PG_SW_Tab_Reports')
-                ));
-            }
         }
+        
         return tabs;
     }
 
