--- a/force-app/main/default/classes/ResourceRemote.cls
+++ b/force-app/main/default/classes/ResourceRemote.cls
@@ -7,6 +7,8 @@ public with sharing class ResourceRemote {
             ResourceService resourceService = (ResourceService) ClassFactory.newInstance(ResourceService.class);
             if ('Favorite'.equalsIgnoreCase(resourceMode)) {
                 return resourceService.getFavoriteResources(resourceType);
+            } else if ('Documents'.equalsIgnoreCase(resourceMode)) {
+                return resourceService.getStudyDocuments();
             } else {
                 return resourceService.getResources(resourceType);
             }
